Fix for detail page headers not showing up. Overwrite of some of Ionic's default dynamic (and broken) styling for them.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -474,6 +474,11 @@ a.item:after, button.item:after, .item[href] .item-content:after, .item[ng-click
   border-bottom: solid #d7d7d7 1px;
 }
 
+h1.title.title-fix {
+  left: 66px !important;
+  width: 170px;
+}
+
 /*.swipe-card.disable-user-behavior {
   -webkit-user-select: all !important;
   -moz-user-select: all !important;
